[package]
name = "kincir_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
itertools = "0.13.0"
nix = { version = "0.29.0", features = ["fs"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_with = "3.11.0"
tar = "0.4.43"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
which = "7.0.0"
